# it4r-homework-fullstack

./: Makefile  README.md  docker-compose.yml  package-lock.json
.husky/: pre-commit
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
backend/homework_fullstack/: cantons.json  main.py  utils.py
backend/homework_fullstack/data/: cantons-geo.json  cantons.csv
backend/scripts/: start.sh
backend/tests/: test_clean.py  test_utils.py
dataset/: canton.csv
frontend/: Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: GenderChart.vue  GenderMap.vue  GenderSelect.vue  GenderTable.vue
frontend/src/models/: canton.model.ts  code.model.ts
frontend/src/router/: index.ts
frontend/src/stores/: cantons.ts  codes.ts
frontend/src/utils/: canton.ts  chart.ts
frontend/src/views/: HomeView.vue  MapView.vue  SelectView.vue  TableView.vue
